Revert "Fixes introjs overflow bug"
This reverts commit 1bc04284cf36a53b3c89ec7cb1bb5c7ca8695e65.

--- a/src/assets/scss/modules/_global.scss
+++ b/src/assets/scss/modules/_global.scss
@@ -1,3 +1,3 @@
-.mdl-layout {
+html {
     overflow: hidden;
 }
